sumo/tests/netconvert/errors/large_coordinates/net.netconvert
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Wed Apr 20 15:44:39 2016 by SUMO netconvert Version dev-SVN-r20491
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/netconvertConfiguration.xsd">

    <input>
        <node-files value="input_nodes.nod.xml"/>
        <edge-files value="input_edges.edg.xml"/>
    </input>

    <output>
        <output-file value="net.net.xml"/>
    </output>

    <processing>
        <offset.disable-normalization value="true"/>
    </processing>

    <report>
        <xml-validation value="never"/>
    </report>

</configuration>
-->

<net version="0.27" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/net_file.xsd">

    <location netOffset="0.00,0.00" convBoundary="1000000.00,0.00,1000010.00,0.00" origBoundary="1000000.00,0.00,1000010.00,0.00" projParameter="!"/>

    <edge id="0" from="0" to="1" priority="-1">
        <lane id="0_0" index="0" speed="13.90" length="10.00" shape="1000000.00,-1.65 1000010.00,-1.65"/>
    </edge>

    <junction id="0" type="unregulated" x="1000000.00" y="0.00" incLanes="" intLanes="" shape="1000000.00,-0.05 1000000.00,-3.25"/>
    <junction id="1" type="unregulated" x="1000010.00" y="0.00" incLanes="0_0" intLanes="" shape="1000010.00,-3.25 1000010.00,-0.05"/>

</net>
